updated css fixed layout bug banner home and improve banner faciltiies

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ a {
 }
 body,
 html {
+  height: 100%;
   margin: 0;
   background: #fff !important;
   font-family: Lato, Helvetica, Arial, sans-serif;
@@ -945,6 +946,20 @@ body {
 #banner-top-page .wrapper-carousel-img {
   height: 100%;
   max-height: 580px;
+}
+#facilities-top-page .carousel-indicators {
+  bottom: -12px !important;
+}
+
+#facilities-top-page .carousel-indicators li {
+  width: 10px !important;
+  height:  10px !important;
+}
+
+@media (min-width: 480px) {
+  #facilities-top-page .carousel-indicators {
+    bottom: -6px !important;
+  }
 }
 #facilities-top-page .wrapper-carousel-img {
   /* height: 100%; */
